--- a/juhuasuan/index.html
+++ b/juhuasuan/index.html
@@ -9,99 +9,8 @@
     -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
     <title>聚划算</title>
-    <style>
-        *{ margin:0; padding:0; font-family:微软雅黑;}
-        html{ font-size:20px; color:#999;}
-        ul,li,ol{ list-style:none;}
-        em{ font-style:normal;}
-        a{ color:#999; text-decoration:none;}
-        a:hover{ color:#d51938;}
-
-        header{ position:relative; width:100%; height:2.5rem; background:-webkit-linear-gradient(#fff,#ebebeb); text-align:center;}
-        header .go_back{ position:absolute; top:0.5rem; left:0.5rem; width:3.25rem; height:1.6rem; background:url(images/goback.png) no-repeat; background-size:100%; text-indent:-999rem;}
-        header img{ width:9.4rem; height:2.2rem; margin-top:0.175rem;}
-        .banner{ width:16rem; height:7.45rem; position:relative;}
-        .banner .bd{ position:absolute; left:0; top:0; width:100%; height:6.675rem; overflow:hidden;}
-        .banner .bd ul{ width:80rem; height:6.675rem;}
-        .banner .bd li{ float:left; width:16rem; height:6.675rem;}
-        .banner .bd li img{ width:100%;}
-
-        .banner .hd{ position:absolute; left:50%; bottom:0; height:0.25rem; margin-left:-2.5rem;}
-        .banner .hd li{ float:left; width:0.25rem; height:0.25rem; background:#a9a9a9; margin:0 0.25rem; border-radius:50%;}
-        .banner .hd li.active{ background:#ff4300;}
-
-        .nav_list{ padding-top:0.5rem;}
-        .nav_list ul{ overflow:hidden;}
-        .nav_list ul li{ float:left; width:25%; height:3rem; padding:0.5rem 0;}
-        .nav_list ul li a{ display:block; width:3rem; height:3rem; margin:0 auto; text-align:center; color:#999; text-decoration:none;}
-        .nav_list ul li a span{ display:block; font-size:0.7rem; padding-top:0.25rem;}
-        .nav_list ul li .img{ background:#da3809 url(images/nav_icon01.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%; margin:0 auto;}
-        .nav_list ul li:nth-child(2) .img{ background:#18a78c url(images/nav_icon02.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(3) .img{ background:#000 url(images/nav_icon03.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(4) .img{ background:#ff529d url(images/nav_icon04.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(5) .img{ background:#cfa871 url(images/nav_icon05.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(6) .img{ background:#ffb021 url(images/nav_icon06.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(7) .img{ background:#a1c36f url(images/nav_icon07.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-        .nav_list ul li:nth-child(8) .img{ background:#f5493c url(images/nav_icon08.png) no-repeat; background-size:100%; width:2rem; height:2rem; border-radius:50%;}
-
-        .content{ padding:0 0.5rem;}
-
-        .hot_sale{ padding:1rem 0 0;}
-        .hot_sale .title{ height:1.4rem; border-bottom:3px solid #dcdcdc; font-size:0.8rem; color:#000;}
-        .hot_sale .title em{ border-left:3px solid #d51938; padding-left:0.35rem;}
-        .hot_sale .title span{ float:right;}
-
-        .hot_sale .list{ padding:0.25rem 0;}
-        .hot_sale .list li{ height:3rem; background:#f4f4f4; margin:0.5rem 0; overflow:hidden;}
-        .hot_sale .list li .num{ float:left; width:1.7rem; height:3rem; line-height:3rem; font-size:1.2rem; text-align:center; background:#e00202; color:#fff;}
-        .hot_sale .list li:nth-child(2) .num{ background:#ff4800;}
-        .hot_sale .list li:nth-child(3) .num{ background:#ff7300;}
-        .hot_sale .list li:nth-child(4) .num{ background:#ff9d00;}
-        .hot_sale .list li:nth-child(5) .num{ background:#ffa800;}
-        .hot_sale .list li:nth-child(6) .num{ background:#ffb400;}
-        .hot_sale .list li:nth-child(7) .num{ background:#ffba00;}
-        .hot_sale .list li:nth-child(8) .num{ background:#fcd000;}
-        .hot_sale .list li:nth-child(9) .num{ background:#ffd719;}
-        .hot_sale .list li:nth-child(10) .num{ background:#ffe152;}
-        .hot_sale .list li .img{ float:left; width:4.5rem; height:100%;}
-        .hot_sale .list li .img img{ width:100%;}
-        .hot_sale .list li .detail{ float:left; width:7.8rem; padding:0.5rem; display:-webkit-box; font-size:0.7rem;}
-        .hot_sale .list li .detail .info{ -webkit-box-flex:7;}
-        .hot_sale .list li .detail .info span{ text-decoration:line-through;}
-        .hot_sale .list li .detail em{ display:inline-block; -webkit-box-flex:3; background:url(images/icon_price.png) no-repeat right; padding-right:1rem; background-size:40%; margin-top:0.5rem; color:#d51938;}
-
-        .product_group{}
-        .product_group .title_more{ display:block; height:2rem; line-height:2rem; background:#f5f5f5; text-align:center; font-size:0.8rem; margin-bottom:0.5rem;}
-        .product_group .mt{ margin-top:0.5rem; background:#f5f5f5 url(images/icon_price.png) no-repeat right; background-size:9%; }
-        .live_group .title_more,.brand_group .title_more{ display:block; height:2rem; line-height:2rem; background:#f5f5f5 url(images/icon_price.png) no-repeat right; background-size:9%; text-align:center; font-size:0.8rem; margin:0.5rem 0;}
-        .group_list{ height:8.5rem;}
-        .group_icon{ float:left; width:3.75rem; height:8.5rem;}
-        .group_icon img{ width:100%; height:100%;}
-        .group_table{ float:left; width:11.25rem; height:8.5rem;}
-        .group_table table{ width:100%; height:100%; border:none; border-collapse:collapse;}
-        .group_table table tr{}
-        .group_table table td{ width:33%; border:1px solid #eee; font-size:0.7rem; text-align:center;}
-        .group_table table td .red{ color:#d51938;}
-
-        .down_list{ height:3.875rem; margin:0.5rem 0;}
-        .down_list ul{ border-right:1px solid #dcdcdc; display:-webkit-box;}
-        .down_list ul li{ height:3.875rem; -webkit-box-flex:1; border:1px solid #dcdcdc; border-right:none; text-align:center; font-size:0.7rem;}
-        .down_list ul li a{ display:block; padding:0.5rem 0;}
-        .down_list ul li img{ display:block; width:1.3rem; height:1.3rem; margin:0 auto;}
-        .down_list ul li span{ display:block; padding-top:0.5rem;}
-
-        .go_top{ height:2.2rem; line-height:2.2rem; background:#f8f8f8; padding:0 1rem; font-size:0.7rem;}
-        .go_top a{ color:#000; padding:0 0.2rem;}
-        .go_top .icon_top{ float:right; background:url(images/icon_top.jpg) no-repeat right; padding-right:0.8rem;}
-
-        footer{ padding:0.5rem 0; text-align:center;}
-        footer .edition{ height:1.2rem; line-height:1.2rem;}
-        footer .edition a{ display:inline-block; padding:0 0.2rem; color:#000; font-size:0.7rem;}
-        footer .copyright{ line-height:1rem; font-size:0.7rem;}
-
-
-
-    </style>
+    <link rel="stylesheet" href="css/css.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <script>
         (function(win,doc){
             var rem=20/320*document.documentElement.clientWidth;
@@ -208,7 +117,7 @@
             <div class="list">
                 <ul>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">1</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -221,7 +130,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">2</span>
                             <div class="img"><img src="images/hot_saleImg02.jpg" alt=""/></div>
                             <div class="detail">
@@ -234,7 +143,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">3</span>
                             <div class="img"><img src="images/hot_saleImg03.jpg" alt=""/></div>
                             <div class="detail">
@@ -247,7 +156,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">4</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -260,7 +169,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">5</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -273,7 +182,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">6</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -286,7 +195,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">7</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -299,7 +208,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">8</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -312,7 +221,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">9</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -325,7 +234,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
+                        <a href="#">
                             <span class="num">10</span>
                             <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
                             <div class="detail">
@@ -479,7 +388,7 @@
             <a href="#">标准版</a>
             <a href="#">电脑版</a>
         </div>
-        <div class="copyright">©2013 浙B2-20080224   服务中心</div>
+        <div class="copyright">©2016 浙B2-20080224   服务中心</div>
 
     </footer>
 
