--- a/juhuasuan/index.html
+++ b/juhuasuan/index.html
@@ -162,66 +162,66 @@
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥289</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">4</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg04.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥88</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">5</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg05.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥199</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">6</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg06.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥588</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">7</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg07.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥4599</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">8</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg08.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
@@ -234,26 +234,26 @@
                     <li>
                         <a href="#">
                             <span class="num">9</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg09.png" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥129</em>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <span class="num">10</span>
-                            <div class="img"><img src="images/hot_saleImg.jpg" alt=""/></div>
+                            <div class="img"><img src="images/hot_saleImg10.jpg" alt=""/></div>
                             <div class="detail">
                                 <div class="info">
                                     <p>已售</p>
                                     <p>2.3折 ￥<span>299</span></p>
                                 </div>
-                                <em>￥51</em>
+                                <em>￥9</em>
                             </div>
                         </a>
                     </li>
@@ -333,23 +333,23 @@
                 <div class="group_table">
                     <table>
                         <tr>
-                            <td><a href="#" class="red">服饰</a></td>
-                            <td><a href="#">配饰</a></td>
-                            <td><a href="#">美妆</a></td>
+                            <td><a href="#" class="red">七匹狼</a></td>
+                            <td><a href="#">粉红女</a></td>
+                            <td><a href="#">卓诗尼</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#">鞋包</a></td>
-                            <td><a href="#" class="red">食品</a></td>
-                            <td><a href="#">家居</a></td>
+                            <td><a href="#">收纳博士</a></td>
+                            <td><a href="#" class="red">惠氏</a></td>
+                            <td><a href="#">夏乐</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#">运动</a></td>
-                            <td><a href="#">电器</a></td>
-                            <td><a href="#" class="red">百货</a></td>
+                            <td><a href="#">帕克伦</a></td>
+                            <td><a href="#">古今</a></td>
+                            <td><a href="#" class="red">九牧</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#" class="red">母婴</a></td>
-                            <td><a href="#">数码</a></td>
+                            <td><a href="#" class="red">诺奥</a></td>
+                            <td><a href="#">红豆</a></td>
                             <td><a href="#">更多</a></td>
                         </tr>
                     </table>
