--- a/juhuasuan/index.html
+++ b/juhuasuan/index.html
@@ -15,11 +15,10 @@
         (function(win,doc){
             var rem=20/320*document.documentElement.clientWidth;
             doc.documentElement.style.fontSize=rem+'px';
-            window.onresize=function(){
+            win.onresize=function(){
                 var rem=20/320*document.documentElement.clientWidth;
                 doc.documentElement.style.fontSize=rem+'px';
             }
-
         })(window,document);
     </script>
 </head>
@@ -67,25 +66,25 @@
     <nav class="nav_list">
         <ul>
             <li>
-                <a href="#">
+                <a href="product.html">
                     <div class="img"></div>
                     <span>商品</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="life.html">
                     <div class="img"></div>
                     <span>生活</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="brand.html">
                     <div class="img"></div>
                     <span>品牌</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="cornucopia.html">
                     <div class="img"></div>
                     <span>聚宝盆</span>
                 </a>
@@ -103,7 +102,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="poly.html">
                     <div class="img"></div>
                     <span>聚透</span>
                 </a>
