--- a/juhuasuan/life.html
+++ b/juhuasuan/life.html
@@ -58,7 +58,7 @@
 <body>
     <!--头部-->
     <header>
-        <a href="javascript:;" class="go_back">返回</a>
+        <a href="javascript:history.back();" class="go_back">返回</a>
         <span class="title">杭州 生活团</span>
         <a href="javascript:;" class="category_btn">分类</a>
     </header>
