--- a/juhuasuan/poly.html
+++ b/juhuasuan/poly.html
@@ -20,7 +20,7 @@
 <body>
     <!--头部-->
     <header>
-        <a href="javascript:;" class="go_back">返回</a>
+        <a href="javascript:history.back();" class="go_back">返回</a>
         <span class="title">聚透</span>
     </header>
 
