--- a/juhuasuan/product.html
+++ b/juhuasuan/product.html
@@ -20,7 +20,7 @@
 <body>
     <!--头部-->
     <header>
-        <a href="javascript:;" class="go_back">返回</a>
+        <a href="javascript:history.back();" class="go_back">返回</a>
         <img src="images/logo.png" alt=""/>
         <a href="javascript:;" class="category_btn">分类</a>
     </header>
