--- a/juhuasuan/brand.html
+++ b/juhuasuan/brand.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="brand_img">
-                    <a href="#"><img src="images/brandImg01.jpg" alt=""/></a>
+                    <a href="brand_list.html"><img src="images/brandImg01.jpg" alt=""/></a>
                     <div class="bg"></div>
                     <span class="txt">极致轻快 绝影一击</span>
                 </div>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="brand_img">
-                    <a href="#"><img src="images/brandImg01.jpg" alt=""/></a>
+                    <a href="brand_list.html"><img src="images/brandImg01.jpg" alt=""/></a>
                     <div class="bg"></div>
                     <span class="txt">极致轻快 绝影一击</span>
                 </div>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="brand_img">
-                    <a href="#"><img src="images/brandImg01.jpg" alt=""/></a>
+                    <a href="brand_list.html"><img src="images/brandImg01.jpg" alt=""/></a>
                     <div class="bg"></div>
                     <span class="txt">极致轻快 绝影一击</span>
                 </div>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="brand_img">
-                    <a href="#"><img src="images/brandImg01.jpg" alt=""/></a>
+                    <a href="brand_list.html"><img src="images/brandImg01.jpg" alt=""/></a>
                     <div class="bg"></div>
                     <span class="txt">极致轻快 绝影一击</span>
                 </div>
