--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="top_nav">
                 <ul>
                     <li class="active">
-                        <em></em><a href="#">首页</a>
+                        <em></em><a href="#">首页123</a>
                     </li>
                     <li>
                         <em class="em02"></em><a href="#">视频</a>
