--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="top_nav">
                 <ul>
                     <li class="active">
-                        <em></em><a href="#">首页123</a>
+                        <em></em><a href="#">首页</a>
                     </li>
                     <li>
                         <em class="em02"></em><a href="#">视频</a>
@@ -34,7 +34,7 @@
             </div>
             <div class="user_info">
                 <div class="user_text">
-                    <em></em>邓昌青49751
+                    <em></em>邓昌青181213
                 </div>
 
                 <a href="#" class="icon01"></a>
